[package]
name = "oktree"
description = "Fast octree implementation to handle voxel-like data in Bevy game engine."
version = "0.1.0"
repository = "https://github.com/exor2008/oktree"
keywords = ["graphics", "bevy", "voxel", "octree"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy"]
bevy = ["dep:bevy"]

[dependencies]
num = "0.4.3"
bevy = { version = "0.14.2", optional = true }
heapless = "0.8.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
