[package]
name = "oktree"
description = "Fast octree implementation to handle voxel-like data in Bevy game engine."
version = "0.2.0"
repository = "https://github.com/exor2008/oktree"
keywords = ["graphics", "bevy", "voxel", "octree"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bevy = ["dep:bevy"]

[dependencies]
num = "0.4.3"
bevy = { version = ">=0.9", optional = true }
heapless = "0.8.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
required-features = ["bevy"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["bevy"]

[[example]]
name = "bevy_tree"
path = "examples/bevy_tree.rs"
required-features = ["bevy"]
