[package]
name = "oktree"
description = "Fast octree implementation."
version = "0.4.1"
repository = "https://github.com/exor2008/oktree"
keywords = ["graphics", "bevy", "voxel", "octree"]
edition = "2021"
license = "MIT"

[features]
default = []
bevy = ["dep:bevy"]

[dependencies]
num = "0.4.3"
bevy = { version = ">=0.9", optional = true }
heapless = "0.8.0"
smallvec = {version = "1.13.2", features = ["const_generics"]}

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
required-features = ["bevy"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["bevy"]

[[example]]
name = "bevy_tree"
path = "examples/bevy_tree.rs"
required-features = ["bevy"]

[[example]]
name = "profile"
path = "examples/profile.rs"
required-features = ["bevy"]

[package.metadata.docs.rs]
all-features = true

[profile.profiler]
inherits = "release"
debug = true
split-debuginfo = "full"
opt-level = 3